--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -8,13 +8,13 @@
 :root {
   --ifm-background-color: #F4EEEE;
   --ifm-navbar-background-color: var(--ifm-background-color);
-  --ifm-color-primary: #faeeee;
-  --ifm-color-primary-dark: #efc8c8;
-  --ifm-color-primary-darker: #e9b5b5;
-  --ifm-color-primary-darkest: #d97d7d;
-  --ifm-color-primary-light: #ffffff;
-  --ifm-color-primary-lighter: #ffffff;
-  --ifm-color-primary-lightest: #ffffff;
+  --ifm-color-primary: #2e8555;
+  --ifm-color-primary-dark: #29784c;
+  --ifm-color-primary-darker: #277148;
+  --ifm-color-primary-darkest: #205d3b;
+  --ifm-color-primary-light: #33925d;
+  --ifm-color-primary-lighter: #359962;
+  --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
